# devops-hw1

./: README.md  Vagrantfile
app/api/: app.py  pyproject.toml
app/db/: ConceptualDataMode.cdm  dbsetup.sql
app/frontend/: index.html  new-vehicle.html  sources.html
app/frontend/js/: add-vehicle.js  api.js  app.js  card.js  data.js
app/frontend/styles/: style.css
cloud-init/: app.py  cloud-config.yaml
